<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="copyrights">Copyrights © 2019 Yuva R</string>
    <string name="output">OUTPUT</string>
</resources>
